--- a/jftd-111/sample-app/package.json
+++ b/jftd-111/sample-app/package.json
@@ -23,6 +23,6 @@
     "npm": "^6.14.8",
     "protobufjs": "6.11.4",
     "pug": "^3.0.0",
-    "cors.js": "^0.0.1-security"
+    "cors": "2.8.5"
   }
 }
