--- a/JFTD 110 Software Supply Chain Platform Automation/lab-3-Build-and-Replication/example/demo-node-app/package.json
+++ b/JFTD 110 Software Supply Chain Platform Automation/lab-3-Build-and-Replication/example/demo-node-app/package.json
@@ -22,14 +22,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rkfrog/demo-node-app.git"
+    "url": "git+https://github.com/jfrog/SwampUp2024.git"
   },
-  "author": "Roshan Kadasani <roshank@jfrog.com>",
+  "author": "Roshan Kadasani",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rkfrog/demo-node-app/issues"
+    "url": "https://github.com/jfrog/SwampUp2024/issues"
   },
-  "homepage": "https://github.com/rkfrog/demo-node-app#readme",
   "dependencies": {
     "axios": "^1.3.4",
     "cookie-parser": "~1.4.4",
