--- a/JFTD-113/maven/.jfrog/projects/maven.yaml
+++ b/JFTD-113/maven/.jfrog/projects/maven.yaml
@@ -1,11 +1,11 @@
 version: 1
 type: maven
 resolver:
-    serverId: soleng-latest
-    snapshotRepo: jftd113-dev-maven-remote
-    releaseRepo: jftd113-dev-maven-remote
+    serverId: swampup-jftd-113
+    snapshotRepo: puser0-dev-maven-virt
+    releaseRepo: puser0-dev-maven-virt
 deployer:
-    serverId: soleng-latest
-    snapshotRepo: jftd113-dev-maven-virt
-    releaseRepo: jftd113-dev-maven-virt
+    serverId: swampup-jftd-113
+    snapshotRepo: puser0-dev-maven-virt
+    releaseRepo: puser0-dev-maven-virt
 useWrapper: true
