Updates to Lab Readme's and removal of Sample app package-lock.json

--- a/JFTD-111-Be Your Software Supply Chain’s Gate Keeper - From Code to Runtime/sample-app/Dockerfile
+++ b/JFTD-111-Be Your Software Supply Chain’s Gate Keeper - From Code to Runtime/sample-app/Dockerfile
@@ -1,5 +1,5 @@
 # Create image based on the official Node image from dockerhub
-FROM tomjfrog.jfrog.io/su24-app-docker-virtual/node:lts-buster
+FROM <your-course-instance>/<docker-virtual-repo-name>/node:lts-buster
 
 # Create app directory
 WORKDIR /usr/src/app
