--- a/.github/workflows/frogbot-scan-pull-request.yml
+++ b/.github/workflows/frogbot-scan-pull-request.yml
@@ -44,7 +44,7 @@ jobs:
           # The name of the branch on which Frogbot will perform the scan
           JF_GIT_BASE_BRANCH: ${{ matrix.branch }}
 
-      # [Mandatory if using OIDC authentication protocol instead of JF_ACCESS_TOKEN]
-      # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
-      # with:
-        oidc-provider-name: "oren"
+        # [Mandatory if using OIDC authentication protocol instead of JF_ACCESS_TOKEN]
+        # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
+        with:
+          oidc-provider-name: "oren"
